# work_assistant

./: alembic.ini  assistent.py  build_project.py  main.py  pyproject.toml  resources.qrc
alembic/: env.py
alembic/versions/: 33781e54c25c_initial_schema_creation.py  9abf373be172_create_tables.py
assets/qt_assets/forms/: ui_base_dialog_view.ui  ui_divisions_report_widget.ui  ui_main_window.ui  ui_orders_report_widget.ui  ui_report_generation_widget.ui  ui_reports_window_widget.ui  ui_staff_report_widget.ui  ui_work_events_report_widget.ui  ui_work_types_report_widget.ui  ui_works_report_widget.ui
instance/csv_table_data/: departments.csv  divisions.csv  employee_positions.csv  employees.csv  equipment.csv  equipment_locations.csv  work_tasks.csv  work_types.csv  works.csv
instance/json_table_data/: departments.json  divisions.json
qt_assets/: compile_resources.py
qt_assets/forms/: ui_creating_ws_forms.ui  ui_main_window.ui
qt_assets/qt_forms/: ui_main_menu_widget.ui  ui_main_window.ui  ui_report_generation_widget.ui
qt_assets/qt_styles/: main_menu_style.qss  main_window_style.qss
qt_assets/styles/: main_window_style.qss  style.qss
scripts/: compile_qrc_ui.py  resource_loader.py
src/: app_coordinator.py  main.py
src/core/: constants.py  exceptions.py
src/core/exceptions/: db_exceptions.py
src/core/interfaces/: coordinators.py  data_protocols.py  dto_protocols.py  entities.py  factories.py  invokers.py  repositories.py  services.py  ui.py  validators.py  view_models.py  viewmodels.py
src/core/interfaces/views/: gui_views.py
src/core/models/: __init__.py  department_domain.py  division_domain.py  domain_models.py
src/core/services/: __init__.py  employee_service.py
src/core/validators/: division_validator.py  division_validators.py
src/database/: config.py  constants.py  db_manager.py
src/database/entities/: department.py  division.py  employee.py  employee_position.py  equipment.py  equipment_location.py  work.py  work_order.py  work_task.py  work_type.py
src/database/entities/associations/: equipment_work.py
src/database/interfaces/: repositories.py
src/database/repositories/: division.py
src/databases/: database.py
src/di/: app_container.py  container.py  database_container.py  factories.py  invokers.py  providers.py  report_container.py  report_session_container.py  services_container.py  sessions_container.py  viewmodels_container.py  views_container.py
src/entities/: __init__.py  department.py  deprtment_entity.py  device.py  device_entity.py  device_location.py  device_location_entity.py  division.py  employee.py  employee_entity.py  employee_position.py  employee_position_entity.py  equipment.py  equipment_location.py  service.py  service_entity.py  type_work_entity.py  work.py  work_entity.py  work_event.py  work_event_entity.py  work_order.py  work_order_entity.py  work_task.py  work_type.py
src/entities/associations/: device_work.py  equipment_work.py
src/gui/: constants.py
src/gui/coordinators/: __init__.py  app_coordinator.py  protocols_coordinator.py  reports_coordinator.py
src/gui/coordinators/reports/: __init__.py  division_coordinator.py  orders_coordinator.py  staff_coordinator.py  work_events_coordinator.py  work_types_coordinator.py  works_coordinator.py
src/gui/dto/: gui_dto_models.py  model_pipeline_services.py  models.py  pipeline_services.py
src/gui/interfaces/: coordinators.py
src/gui/models/: division_table_model.py
src/gui/models/reports/: division_report_table_models.py  division_table_model.py
src/gui/utils/: __init__.py  qt_recource_loader.py
src/gui/viewmodels/: __init__.py  base_view_model.py  division_viewmodel.py
src/gui/viewmodels/dialogs/: add_division_dialog_model.py  base_dialog_model.py  division_dialog_models.py  edit_division_dialog_model.py
src/gui/views/: __init__.py  base_views.py  dialog_edit_view.py  division_report_view.py  main_menu_view.py  main_menu_window.py  main_window.py  main_window_view.py  order_report_view.py  reports_window.py  reports_window_view.py  staff_report_view.py  work_event_report_view.py  work_report_view.py  work_type_report_view.py
src/infrastucture/database/: __init__.py  config.py  db_manager.py
src/infrastucture/excel/: worksheet_content.py  worksheets.py
src/interfaces/: base_widgets.py  service.py
src/package/: work_sheet.py  work_sheet_test.py  worker.py
src/repositories/: division.py  service.py
src/services/: EmployeeService.py  employee_service.py
src/services/worksheets/: worksheet_styles.py  worksheets.py
src/shared/: base_dto.py  base_dto_models.py
src/shared/mappers/: division_mapper_service.py  mapper_services.py
src/utils/: database_data.py  file_utils.py  qt_recource_loader.py  version.py
src/view_models/: view_service_models.py
src/viewmodels/: __init__.py  base_viewmodel.py  division_viewmodel.py  qt_interfaces.py
src/viewmodels/interfaces/: view_models.py
src/viewmodels/reports/: division_viewmodel.py
src/views/: dialog_edit_view.py  division_report_view.py  main_menu_view.py  main_window_view.py  order_report_view.py  report_generator_view.py  staff_report_view.py  work_event_report_view.py  work_report_view.py  work_type_report_view.py
src/views/controllers/: base_widgets.py  dialog_edit_data.py  main_menu.py  main_window.py  order_reports.py  report_generator.py  service_reports.py  staff_reports.py  work_event_reports.py  work_reports.py  work_type_reports.py
(+36 files in other folders)
