[project]
name = ""
version = "0.0.2"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
    "pyside6>=6.10.1",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"


# ====================================================================
# Секция для конфигурации Mypy
# ====================================================================
[tool.mypy]
# === 1. Базовые настройки области видимости ===
# Указываем Mypy, какие папки проверять.
# Замените 'src' и 'tests' на имена ваших папок с кодом.
files = ["src", "tests"]

# === 2. Уровень строгости проверки (Рекомендуется для новых проектов) ===
# Включение строгого режима активирует сразу множество проверок.
strict = true

# Если вы работаете с унаследованным кодом и strict=true слишком сурово:
# Используйте эти флаги для постепенного ужесточения:
# disallow_untyped_defs = true    # Запрещает функции без аннотаций
# no_implicit_optional = true      # Требует явного указания Optional[...]
# warn_unused_ignores = true       # Предупреждает о ненужных # type: ignore

# === 3. Обработка зависимостей и импортов ===
# Это очень важная настройка: Mypy не будет ругаться, если
# сторонние библиотеки (например, requests, Django) не имеют своих аннотаций.
ignore_missing_imports = true

# Позволяет Mypy находить импорты в вашей структуре проекта
# (например, импорт src/models из tests/)
# show_absolute_path = true # Полезно для отладки

# === 4. Правила для конкретных модулей или исключения ===

# Пример: Игнорировать ошибки типов в папке миграций SQLAlchemy/Django
[[tool.mypy.overrides]]
module = ["migrations.*", "vendor.*", "src.views.windows.*", "src.views.generated.*"]
ignore_errors = true

# Пример: Сделать определенный файл менее строгим
[[tool.mypy.overrides]]
module = "legacy_code.old_script"
strict = false
